--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -82,8 +82,11 @@
     <div id="prediction">
         {% if prediction %}
         <h3>Estimated Price for a {{ year }} {{ manufacturer }} {{ model }} with {{ mileage }} miles: ${{ prediction }}</h3>
+        <a href="/" style="display: inline-block; margin-top: 20px; padding: 10px 20px; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px;">Fill Out Another Form</a>
         {% endif %}
     </div>
 </div>
+
+
 </body>
 </html>
