--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -3,6 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <title>AutoEconomix Car Price Prediction</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0 auto;
+            max-width: 1200px;
+            padding: 20px;
+        }
+
+        h1, h2, p {
+            text-align: center;
+        }
+
+        form {
+            display: grid;
+            gap: 5px;
+            margin-bottom: 5px;
+        }
+
+        select, input[type="number"] {
+            width: 60%;
+            padding: 5px;
+            margin: 5px 0;
+            display: inline-block;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+
+        input[type="submit"] {
+            width: 60%;
+            background-color: #007bff;
+            color: white;
+            padding: 14px 20px;
+            margin: 8px 0;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+
+        input[type="submit"]:hover {
+            background-color: #0056b3;
+        }
+
+        .image-row {
+            display: flex;
+            justify-content: space-around;
+            margin-bottom: 20px;
+            flex-wrap: wrap;
+        }
+
+        .image-row img {
+            max-width: 50%;
+            height: auto;
+            margin-bottom: 20px;
+        }
+
+        #visualizations {
+            text-align: center;
+        }
+
+        #visualizations h2, #visualizations div {
+            margin-bottom: 20px;
+        }
+    </style>
 </head>
 <body>
 <h1>Welcome to AutoEconomix Car Price Predictor</h1>
@@ -81,9 +145,35 @@
 <div>
     <div id="prediction">
         {% if prediction %}
-        <h3>Estimated Price for a {{ year }} {{ manufacturer }} {{ model }} with {{ mileage }} miles: ${{ prediction }}</h3>
-        <a href="/" style="display: inline-block; margin-top: 20px; padding: 10px 20px; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px;">Fill Out Another Form</a>
+        <h2 style="color: red">Estimated Price for a {{ year }} {{ manufacturer }} {{ model }} with {{ mileage }} miles: ${{ prediction
+            }}</h2>
+        <a href="/"
+           style="display: inline-block; margin-top: 20px; padding: 10px 20px; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px;">Get Another Price Estimate</a>
         {% endif %}
+    </div>
+</div>
+
+<br>
+<br>
+<br>
+
+<div id="visualizations">
+    <h1>Visualizations</h1>
+    <div>As can be seen in our diagrams below, our model maintains a low Mean Absolute Error (MAE) when predicting car prices, which means that our
+        estimates are <strong>always</strong> accurate.
+    </div>
+    <br>
+    <div class="image-row">
+        <img src="{{ url_for('static', filename='actual_vs_predicted_prices.png') }}" alt="Actual vs Predicted Prices"
+             style="max-width: 45%;">
+        <img src="{{ url_for('static', filename='histogram_of_car_prices.png') }}" alt="Histogram of Car Prices"
+             style="max-width: 45%;">
+    </div>
+    <div class="image-row">
+        <img src="{{ url_for('static', filename='scatterplot_mileage_vs_price.png') }}" alt="Mileage vs Price"
+             style="max-width: 45%;">
+        <img src="{{ url_for('static', filename='bar_chart_average_prices_by_manufacturer.png') }}"
+             alt="Average Car Prices by Manufacturer" style="max-width: 45%;">
     </div>
 </div>
 
